# aprstx

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  aprstx.conf.example  install.sh
.cargo/: config.toml
.github/workflows/: apt-repository.yml  ci.yml  debian-packages.yml  dev-release.yml  release.yml  update-pages.yml
debian/: aprstx-bluetooth@.service  aprstx.service  aprstx.udev  changelog  control  copyright  postinst  postrm  prerm  rules
docs/: APT_REPOSITORY.md
src/: beacon.rs  config.rs  digipeater.rs  filter.rs  gps.rs  lib.rs  main.rs  message.rs  network.rs  router.rs  telemetry.rs
src/aprs/: mod.rs  packet.rs  parser.rs
src/serial/: kiss.rs  mod.rs  pure_serial.rs
tests/: integration_test.rs
